@@ -1,4 +1,7 @@
 * Thu May 1 2003 Philip
+- send who's images along with webcam image
+
+* Thu May 1 2003 Philip
 - get idle time from server
 - changes to webcam support to not require the user to worry about keys and 
 servers
